[gd_scene load_steps=20 format=1]

[ext_resource path="res://scene/Main.gd" type="Script" id=1]
[ext_resource path="res://image/bgsky.png" type="Texture" id=2]
[ext_resource path="res://font/Lemon Jelly Personal Use.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://curves/curve1.tres" type="Curve2D" id=4]
[ext_resource path="res://font/Crasns.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://mainui.tscn" type="PackedScene" id=6]
[ext_resource path="res://image/levelcomplete.png" type="Texture" id=7]
[ext_resource path="res://font/Lobster_1.3.otf" type="DynamicFontData" id=8]
[ext_resource path="res://scene/Popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/Container.tscn" type="PackedScene" id=10]
[ext_resource path="res://ConfirmationDialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://scene/admob.tscn" type="PackedScene" id=12]

[sub_resource type="DynamicFont" id=1]

font/size = 34
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.1, 1.0 ]
}

[sub_resource type="Animation" id=3]

resource/name = "New Anim"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": Vector2Array(  )
}

[sub_resource type="DynamicFont" id=5]

font/size = 24
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 5 )

[sub_resource type="Animation" id=6]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:transform/scale")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.48, 0.48 ) ]
}

[sub_resource type="DynamicFont" id=7]

font/size = 50
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 8 )

[node name="main" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

visibility/opacity = 0.33
transform/scale = Vector2( 0.5, 0.5 )
z/z = -5
texture = ExtResource( 2 )
centered = false

[node name="Question" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Question"]

visibility/opacity = 0.0
rect/min_size = Vector2( 200, 30 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 12.0
margin/top = 73.0
margin/right = 245.0
margin/bottom = 122.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.96875, 0.889726, 0.0491943, 1 )
text = "        Puzzle"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Container" type="Node2D" parent="Question"]

transform/pos = Vector2( -2, 102 )

[node name="left" type="Position2D" parent="Question/Container"]

transform/pos = Vector2( 60, 60 )

[node name="right" type="Position2D" parent="Question/Container"]

transform/pos = Vector2( 170, 60 )

[node name="bright" type="Position2D" parent="Question/Container"]

transform/pos = Vector2( 170, 180 )

[node name="bleft" type="Position2D" parent="Question/Container"]

transform/pos = Vector2( 60, 180 )

[node name="bmid" type="Position2D" parent="Question/Container"]

transform/pos = Vector2( 115, 180 )

[node name="tmid" type="Position2D" parent="Question/Container"]

transform/pos = Vector2( 115, 60 )

[node name="mid" type="Position2D" parent="Question/Container"]

transform/pos = Vector2( 115, 120 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Question"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="AnimationPlayer 2" type="AnimationPlayer" parent="Question"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Path2D0" type="Path2D" parent="Question"]

curve = SubResource( 4 )

[node name="Path2D1" type="Path2D" parent="Question"]

transform/pos = Vector2( 131, 235 )
curve = ExtResource( 4 )

[node name="Path2D2" type="Path2D" parent="Question"]

transform/pos = Vector2( 116, 289 )
curve = ExtResource( 4 )

[node name="Path2D3" type="Path2D" parent="Question"]

transform/pos = Vector2( 116, 289 )
curve = ExtResource( 4 )

[node name="Path2D4" type="Path2D" parent="Question"]

transform/pos = Vector2( 116, 289 )
curve = ExtResource( 4 )

[node name="Label 2" type="Label" parent="Question"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 143.0
margin/top = 78.0
margin/right = 183.0
margin/bottom = 103.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.96875, 0.933421, 0.0643311, 1 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ui" parent="." instance=ExtResource( 6 )]

[node name="Clock" parent="ui/CanvasLayer"]

margin/top = -60.0
margin/right = 152.0
margin/bottom = -20.0

[node name="Popuplevel" parent="ui/CanvasLayer"]

margin/left = 206.0
margin/top = -414.0
margin/right = 246.0
margin/bottom = -374.0

[node name="Sprite" type="Sprite" parent="ui/CanvasLayer/Popuplevel/anim"]

transform/pos = Vector2( 117, 236 )
transform/scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui/CanvasLayer/Popuplevel/anim"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Keyboard" parent="ui/CanvasLayer"]

editor/display_folded = false
margin/top = 70.0
margin/bottom = 110.0

[node name="Label" parent="ui/CanvasLayer"]

visibility/visible = false
rect/scale = Vector2( 0.35, 0.35 )
margin/left = -21.0
margin/top = -13.0
margin/right = 19.0
margin/bottom = 38.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.96875, 0.892653, 0.083252, 1 )
align = 1
valign = 1

[node name="Popup2" parent="ui/CanvasLayer" instance=ExtResource( 9 )]

[node name="Container" parent="ui/CanvasLayer/Popup2" instance=ExtResource( 10 )]

margin/left = 59.0
margin/top = 148.0
margin/right = 179.0
margin/bottom = 448.0

[node name="ScrollContainer" type="ScrollContainer" parent="ui/CanvasLayer/Popup2"]

rect/min_size = Vector2( 100, 100 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 67.0
margin/top = 179.0
margin/right = 517.0
margin/bottom = 279.0
scroll/horizontal = false
scroll/vertical = true
scroll/deadzone = 0

[node name="Label" type="Label" parent="ui/CanvasLayer/Popup2/ScrollContainer"]

rect/min_size = Vector2( 100, 200 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 100.0
margin/bottom = 200.0
text = "gfh
g
g
g
g

g
g
gg

g

g


"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ConfirmationDialog" parent="ui/CanvasLayer" instance=ExtResource( 11 )]

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Node2D" parent="." instance=ExtResource( 12 )]

[connection signal="playerout" from="." to="ui" method="_on_main_playerout"]

[connection signal="animout" from="ui" to="." method="animout"]

[connection signal="qhide" from="ui" to="." method="_on_ui_qhide"]

[connection signal="qshow" from="ui" to="." method="_on_ui_qshow"]

[connection signal="pressed" from="ui/CanvasLayer/Answerbtn" to="Node2D" method="_on_Answerbtn_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Popup/back" to="." method="_on_back_pressedtouch"]

[connection signal="pressed" from="ui/CanvasLayer/Popuplevel/changelevel" to="." method="_on_changelevel_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Popuplevel/changelevel" to="Node2D" method="_on_changelevel_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Popuplevel/cross" to="." method="_on_cross_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Popuprestart/backtoui" to="Node2D" method="_on_backtoui_pressed"]

[connection signal="animation_started" from="ui/CanvasLayer/Popuprestart/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]

[connection signal="pressed" from="ui/CanvasLayer/Popupdied/backretry" to="." method="_on_backretry_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Popupdied/backretry" to="Node2D" method="_on_backretry_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Keyboard/HBoxContainer 2/btndone" to="." method="_on_btndone_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Popup2/back1" to="." method="_on_back2_pressed"]

[connection signal="confirmed" from="ui/CanvasLayer/ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="answer" from="Node2D" to="." method="_on_Node2D_answer"]


[editable path="ui"]
[editable path="ui/CanvasLayer/Popup2"]
[editable path="ui/CanvasLayer/Popup2/Container"]
[editable path="ui/menuin"]
