[gd_scene load_steps=23 format=2]

[ext_resource path="res://scene/Main.gd" type="Script" id=1]
[ext_resource path="res://scene/Rectangle.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Ballg.tscn" type="PackedScene" id=3]
[ext_resource path="res://scene/Spike.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/Starb.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/Rotor.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/Starblack.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/Square.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/gem.tscn" type="PackedScene" id=9]
[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://image/finish.png" type="Texture" id=11]
[ext_resource path="res://scene/Camera2D.gd" type="Script" id=12]
[ext_resource path="res://curves/curve2.tres" type="Curve2D" id=13]
[ext_resource path="res://scene/mainui.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 110, 20000 )

[sub_resource type="Animation" id=2]

resource_name = "New Anim"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.676206, 1, 1, 0.679569 ), Color( 1, 1, 1, 1 ), Color( 0.676206, 1, 1, 0.679569 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 175, 240 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 300, 29 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 20, 600 )

[sub_resource type="Curve2D" id=6]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 20, -70, 0, 0, 0, 0, 190, -70 )
}

[sub_resource type="Curve2D" id=7]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 20, -110, 0, 0, 0, 0, 200, -110 )
}

[sub_resource type="Curve2D" id=8]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 30, -340, 0, 0, 0, 0, 190, -340 )
}

[node name="main" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
Rectangle = ExtResource( 2 )
Ballg = ExtResource( 3 )
Spike = ExtResource( 4 )
Starb = ExtResource( 5 )
Roter = ExtResource( 6 )
Starblack = ExtResource( 7 )
Square = ExtResource( 8 )
Gem = ExtResource( 9 )

[node name="Player" parent="." index="0" instance=ExtResource( 10 )]

position = Vector2( 116, 258 )
bounce = 0.01
velocity = 80.0

[node name="Area2D" type="Area2D" parent="." index="1"]

editor/display_folded = true
modulate = Color( 1, 1, 1, 0.596667 )
position = Vector2( 125, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( -10, 0 )
shape = SubResource( 1 )
disabled = true
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="finish" type="Area2D" parent="." index="2"]

position = Vector2( 123, -12000 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="finish" index="0"]

position = Vector2( -10, -10 )
z_index = 5
build_mode = 0
polygon = PoolVector2Array( -113, 30, -113, -10, -33, -30, 57, -30, 107, 0, 117, 30, 87, 50, 77, 40, 67, 30, 57, 30, 47, 10, 27, 10, 7, 10, -13, 10, -33, 10, -53, 20, -53, 30, -63, 30, -73, 30, -73, 40, -83, 50, -93, 40 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Sprite" type="Sprite" parent="finish" index="1"]

modulate = Color( 0.676206, 1, 1, 0.679569 )
position = Vector2( -10, 0 )
scale = Vector2( 0.6, 0.6 )
z_index = 10
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="finish" index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
"anims/New Anim" = SubResource( 2 )
blend_times = [  ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = 0
limit_top = -10000000
limit_right = 225
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
script = ExtResource( 12 )
_sections_unfolded = [ "Limit", "Transform" ]
cameramove = 50

[node name="Area2D" type="Area2D" parent="Camera2D" index="0"]

self_modulate = Color( 1, 1, 1, 0.502745 )
position = Vector2( 120, -80 )
scale = Vector2( 1.2, 1 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 20
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D" index="0"]

self_modulate = Color( 1, 1, 1, 0.287294 )
position = Vector2( -4.83186, 288 )
scale = Vector2( 1, 0.938272 )
shape = SubResource( 3 )
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="Camera2D/Area2D" index="1"]

position = Vector2( -20.8333, 546 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 8
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D/Area2D" index="0"]

position = Vector2( 15.8333, 69 )
shape = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="Camera2D" index="1"]

position = Vector2( 105, 402 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Camera2D" index="2"]

position = Vector2( 115, -200 )
anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="StaticBody2D" type="StaticBody2D" parent="Camera2D" index="3"]

editor/display_folded = true
position = Vector2( 12, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 6
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/StaticBody2D" index="0"]

position = Vector2( -38, -119 )
shape = SubResource( 5 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Camera2D" index="4"]

editor/display_folded = true
position = Vector2( 291, -26 )
input_pickable = false
collision_layer = 1
collision_mask = 6
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/StaticBody2D2" index="0"]

position = Vector2( -38, -119 )
shape = SubResource( 5 )

[node name="Path2D" type="Path2D" parent="Camera2D" index="5"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 0, -120 )
scale = Vector2( 1.1, 1 )
curve = ExtResource( 13 )
_sections_unfolded = [ "Transform" ]

[node name="PathFollow2D" type="PathFollow2D" parent="Camera2D/Path2D" index="0"]

position = Vector2( 20, -20 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = false
loop = false
lookahead = 4.0

[node name="ballpath" type="Path2D" parent="Camera2D" index="6"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="Camera2D/ballpath" index="0"]

position = Vector2( 20, -70 )
rotation = -3.88771e-006
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="gempath" type="Path2D" parent="Camera2D" index="7"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 7 )

[node name="PathFollow2D" type="PathFollow2D" parent="Camera2D/gempath" index="0"]

position = Vector2( 20, -110 )
rotation = 1.94936e-006
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="rectpath" type="Path2D" parent="Camera2D" index="8"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 8 )

[node name="PathFollow2D" type="PathFollow2D" parent="Camera2D/rectpath" index="0"]

position = Vector2( 30, -340 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="ui" parent="." index="4" instance=ExtResource( 14 )]

[node name="retry" parent="ui/CanvasLayer/Popuprestart" index="1"]

modulate = Color( 0.992188, 0.98056, 0.98056, 1 )

[node name="backtoui" parent="ui/CanvasLayer/Popuprestart" index="2"]

modulate = Color( 0.992188, 0.98056, 0.98056, 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="itemtimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.5
one_shot = true
autostart = true

[node name="balltimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="gemtimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 25.0
one_shot = false
autostart = true

[node name="recttimer" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="playerout" from="." to="ui" method="_on_main_playerout"]

[connection signal="body_entered" from="finish" to="." method="_on_finish_body_entered"]

[connection signal="area_entered" from="Camera2D/Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_exited" from="Camera2D/Area2D" to="." method="_on_Area2D_area_exited"]

[connection signal="body_entered" from="Camera2D/Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Camera2D/Area2D/Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="pressed" from="ui/CanvasLayer/Popuplevel/changelevel" to="." method="_on_changelevel_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/Popuplevel/cross" to="." method="_on_cross_pressed"]

[connection signal="animation_finished" from="ui/CanvasLayer/Popuplevel/star/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="pressed" from="ui/CanvasLayer/Popupdied/backretry" to="." method="_on_backretry_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/left" to="." method="_on_left_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/middle" to="." method="_on_middle_pressed"]

[connection signal="pressed" from="ui/CanvasLayer/right" to="." method="_on_right_pressed"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="timeout" from="itemtimer" to="." method="draw_curve"]

[connection signal="timeout" from="balltimer" to="." method="_on_balltimer_timeout"]

[connection signal="timeout" from="gemtimer" to="." method="_on_gemtimer_timeout"]

[connection signal="timeout" from="recttimer" to="." method="_on_recttimer_timeout"]


[editable path="ui"]
[editable path="ui/CanvasLayer/Popuplevel"]
[editable path="ui/CanvasLayer/Popuprestart"]
[editable path="ui/CanvasLayer/Popupdied"]
